--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ a:hover {
 .main-header {
   background-color: #df1b12;
   display: flex;
-  justify-content: space-between;
+/*   justify-content: space-between; */
   align-items: center;
   padding: 10px 20px;
 }
@@ -32,13 +32,13 @@ a:hover {
 /* White background logo header */
 .logo-header {
   background-color: white;
-  padding: 30px 0;
-  text-align: left;
-  padding-left: 20px;
+  padding: 10px 0;
+  text-align: center;
+  padding-left: 10px;
 }
 
 .logo {
-  height: 100px;
+  height: 300px;
 }
 
 /* Main layout */
