--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ a:hover {
   background-color: #df1b12;
   display: flex;
 /*   justify-content: space-between; */
-  align-items: center;
+/*   align-items: center; */
+  text-align: center;
   padding: 10px 20px;
 }
 
@@ -38,7 +39,7 @@ a:hover {
 }
 
 .logo {
-  height: 300px;
+  height: 400px;
 }
 
 /* Main layout */
@@ -65,7 +66,7 @@ h2 {
 }
 
 .partnerlogo {
-  height: 60px;
+  height: 80px;
 }
 
 /* Footer */
