--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,9 @@ footer a:hover {
   background-color: #df1b12;
   padding: 1.2rem 2rem; 
   display: flex;
-  justify-content: flex-end; 
+  justify-content: center; 
   align-items: center;
-  padding: 10px 20px;
+  padding: 30px 20px;
 }
 
 .main-header a {
