Update styles.css add crima banner to styles

--- a/styles.css
+++ b/styles.css
@@ -58,11 +58,25 @@ a:hover {
 
 /* White background logo header */
 .logo-header {
-  background-color: white;
-  padding: 10px 0;
+/*   background-color: white;
+  padding: 10px 0; */
   text-align: center;
-  padding-left: 10px;
+/*   padding-left: 10px; */
+
+  background-image: url('crima_banner.png'); 
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  width: 100%;
+  height: auto; 
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+
 
 .logo {
   height: 250px;
