--- a/styles.css
+++ b/styles.css
@@ -33,15 +33,16 @@ footer a:hover {
 /* Top red nav bar */
 .main-header {
   background-color: #df1b12;
-  padding: 1.2rem 2rem; 
+  padding: 1.5rem 1.5rem; 
   display: flex;
   justify-content: center; 
   align-items: center;
-  padding: 30px 20px;
+  padding: 20px 20px;
 }
 
 .main-header a {
   margin-left: 20px;
+  margin-right: 20px
 }
 
 
