Update styles.css to dark banner

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ a:hover {
   align-items: center;
   justify-content: center;
   
-  background-image: url('crima_banner.png'); 
+  background-image: url('crima_banner_dark.png'); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
