Update styles.css align flex-start logo to top

--- a/styles.css
+++ b/styles.css
@@ -75,10 +75,10 @@ a:hover {
 
   width: 100%;
   height: auto; 
-/*   
+  
   display: flex;
   align-items: flex-start; 
-  justify-content: flex-start; 
+/*   justify-content: flex-start; 
   padding: 20px;  */
 }
 }
