--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,11 @@ footer a:hover {
 /* Top red nav bar */
 .main-header {
   background-color: #df1b12;
-  padding: 1.5rem 1.5rem; 
+/*   padding: 1.5rem 1.5rem;  */
   display: flex;
   justify-content: center; 
   align-items: center;
-  padding: 20px 20px;
+/*   padding: 20px 20px; */
 }
 
 .main-header a {
