--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ a:hover {
   text-decoration: underline;
 }
 
-/* White background logo header */
+/* Banner background logo header */
 .logo-header {
   background-color: white;
   padding: 10px 0;
@@ -65,7 +65,7 @@ a:hover {
   padding-left: 10px;
 
  
-  align-items: left;
+/*   align-items: left; */
 /*   justify-content: center; */
   
   background-image: url('crima_banner_red.png'); 
@@ -78,8 +78,8 @@ a:hover {
   
   display: flex;
   align-items: flex-start; 
-/*   justify-content: flex-start; 
-  padding: 20px;  */
+  justify-content: flex-start; 
+/*   padding: 20px;  */
 }
 }
 
