--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ footer a:hover {
   display: flex;
   justify-content: center; 
   align-items: center;
-/*   padding: 20px 20px; */
+  padding: 20px 20px;
 }
 
 .main-header a {
