Update styles.css set banner height

--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ a:hover {
   padding: 10px 0;
   text-align: left;
   padding-left: 10px;
-
+  height: 500px;
  
 /*   align-items: left; */
 /*   justify-content: center; */
