Update styles.css test banner with logo

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ a:hover {
 /*   align-items: left; */
 /*   justify-content: center; */
   
-  background-image: url('crima_banner_red.png'); 
+  background-image: url('crima_banner_with_logo.png'); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
