--- a/styles.css
+++ b/styles.css
@@ -59,11 +59,11 @@ a:hover {
 
 /* Banner background logo header */
 .logo-header {
-  background-color: white;
+/*   background-color: white;
   padding: 10px 0;
   text-align: left;
   padding-left: 10px;
-  height: 500px;
+  height: 500px; */
  
 /*   align-items: left; */
 /*   justify-content: center; */
@@ -73,8 +73,8 @@ a:hover {
   background-position: top left;
   background-repeat: no-repeat;
 
-  width: 100%;
-  height: auto; 
+  max-width: 100%;
+  height: 500px; 
   
   display: flex;
   align-items: flex-start; 
