Update styles.css check media size to resize banner on phones

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,10 @@ a:hover {
   max-width: 100%;
   height: 500px; 
   
+  @media (max-width: 768px) {
+  .logo-header {
+    height: 250px;  /* smaller height on phones */
+    
   display: flex;
   align-items: flex-start; 
   justify-content: flex-start; 
