--- a/styles.css
+++ b/styles.css
@@ -74,11 +74,10 @@ a:hover {
   background-repeat: no-repeat;
 
   max-width: 100%;
-  height: 500px; 
+/*   height: 500px;  */
+  aspect-ratio: 3 / 1; /* Maintains shape without fixed height */
+  display: block;
   
-  @media (max-width: 768px) {
-  .logo-header {
-    height: 250px;  /* smaller height on phones */
     
   display: flex;
   align-items: flex-start; 
