--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ a:hover {
 /*   align-items: left; */
 /*   justify-content: center; */
   
-  background-image: url('crima_banner_with_logo.png'); 
+  background-image: url('assets/crima_banner_with_logo.png'); 
   background-size: cover;
   background-position: top left;
   background-repeat: no-repeat;
