--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 /* General in-text links (red)*/
 main a,
 footer a {
-  color: #016382;
+  color: #0b6c88;
   text-decoration: none;
   font-weight: bold;
 }
@@ -33,7 +33,7 @@ footer a:hover {
 
 /* Top red nav bar */
 .main-header {
-  background-color: #016382;
+  background-color: #0b6c88;
 /*   padding: 1.5rem 1.5rem;  */
   display: flex;
   justify-content: center; 
@@ -116,7 +116,7 @@ main {
 /* Section titles */
 h2 {
   margin-top: 40px;
-  color: #016382;
+  color: #0b6c88;
 }
 
 /* Partner logos */
