--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   text-align: left;
 }
 
-/* General in-text links (red)*/
+/* General in-text links*/
 main a,
 footer a {
   color: #0b6c88;
@@ -60,6 +60,55 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+/* Navigation bar option for dropdown menu  */
+.navbar {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+}
+
+.menu-toggle {
+  font-size: 2rem;
+  color: white;
+  cursor: pointer;
+}
+
+.nav-list {
+  list-style: none;
+  padding: 0;
+  margin-top: 1rem;
+  display: none;
+  flex-direction: column;
+  width: 100%;
+}
+
+.nav-list li {
+  width: 100%;
+  margin: 0;
+}
+
+.nav-list a {
+  display: block;
+  width: 100%;
+  padding: 10px 15px;
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.nav-list a:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+/* Show when active */
+.nav-list.active {
+  display: flex;
+}
+
+
 
 /* Banner background logo header */
 .logo-header {
