--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ a:hover {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     width: 80%;
     text-align: center;
+    margin: 0 auto;
   }
 }
 
