--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ a {
   color: white;
   text-decoration: none;
   font-weight: 500;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 a:hover {
